@@ -1,7 +1,7 @@
 cabal-version: 3.0
 
 name:           emitter
-version:        0.1.0.0
+version:        0.2.0.0
 description:    Simple local pub/sub — ported from NPM
 category:       Event Broker
 synopsis:       IO- and STM-based callback channels.
@@ -22,12 +22,13 @@ source-repository head
   location: https://github.com/jmazon/emitter
 
 library
-  exposed-modules: Emitter
-  build-depends: aeson >= 1.4.7.1
-               , base >=4.7 && <5
-               , stm >= 2.5.0.0
-               , text >= 1.2.4.0
-               , unordered-containers >= 0.2.10.0
+  hs-source-dirs: src
+  exposed-modules: Control.Emitter
+  build-depends: aeson >= 1.4.7.1 && <1.5
+               , base >=4.7 && <4.14
+               , stm >= 2.5.0.0 && <2.6
+               , text >= 1.2.4.0 && <1.3
+               , unordered-containers >= 0.2.10.0 && <0.3
   default-language: Haskell2010
 
 test-suite emitter-test
@@ -36,7 +37,7 @@ test-suite emitter-test
   hs-source-dirs: test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends: emitter
-               , base >=4.7 && <5
-               , tasty >= 1.2.3
-               , tasty-hunit >= 0.10.0.2
+               , base >=4.7 && <4.14
+               , tasty >= 1.2.3 && <1.3
+               , tasty-hunit >= 0.10.0.2 && <0.11
   default-language: Haskell2010
