@@ -1,3 +1,7 @@
 2020-09-14  Jean-Baptiste Mazon
 
+	* Moved to Control.Emitter (from Emitter)
+
+2020-09-14  Jean-Baptiste Mazon
+
 	* First release upon an unsuspecting world.
